add_executable(json_test json_test.cpp)
add_executable(graph_test graph_test.cpp)
add_executable(thrust_test thrust_test.cpp)
add_executable(topk_test topk_test.cpp)
add_executable(common_test common_test.cpp)
add_executable(datetime_test datetime_test.cpp)
add_executable(oldest_test oldest_test.cpp)
add_executable(post_sort_test post_sort_test.cpp)
add_executable(louvain_test louvain_test.cpp)